--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "name": "express-recipe-app",
   "version": "1.0.0",
   "description": "",
@@ -12,6 +12,7 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.0",
     "cookie-session": "^1.2.0",
+    "ejs": "^2.3.4",
     "express": "^4.13.3",
     "method-override": "^2.3.5",
     "mongoose": "^4.1.8"
