--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "method-override": "^2.3.5",
+    "moment": "^2.10.6",
     "mongoose": "^4.1.8"
   }
 }
