--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.13.3",
     "method-override": "^2.3.5",
     "moment": "^2.10.6",
-    "mongoose": "^4.1.8"
+    "mongoose": "^4.1.8",
+    "request": "^2.63.0"
   }
 }
