--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-session": "^1.2.0",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "materialize-css": "^0.97.1",
     "method-override": "^2.3.5",
     "moment": "^2.10.6",
     "mongoose": "^4.1.8",
