--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^2.3.5",
     "moment": "^2.10.6",
     "mongoose": "^4.1.8",
-    "request": "^2.63.0"
+    "request": "^2.63.0",
+    "serve-favicon": "^2.3.0"
   }
 }
